# bookstore

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  render.yaml  requirements.txt  wait-for-db.sh
.github/workflows/: build.yml  render.yaml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  tests.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_models/: test_order_models.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  tests.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
