[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["joao-carlos-dev <joaocarlosifsc@hotmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "bookstore"}
]

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2,<6.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
gunicorn = ">=20.1.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
whitenoise = "^6.9.0"
gitpython = "^3.1.44"
dj-database-url = "^2.3.0"
factory-boy = "^3.3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookstore.settings"
python_files = "test_*.py"
